--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    margin: 0px 200px;
+    margin: 0px 450px;
+    font-weight: 400;
 }
 .logo1 {
     height: 33px;
@@ -53,29 +54,11 @@ body{
   }
   .marketplace{
     display: flex;
+    justify-content: space-between;
   }
-  .item-1 h2{
-    font-size: 1.5em;
-    font-weight: 300;
-    line-height: 1.2;
-    margin: 0;
-    color: #fff;
-}
-.item-2 h2{
-    font-size: 1.5em;
-    font-weight: 300;
-    line-height: 1.2;
-    margin: 0;
-    color: #fff;
-}
-  .item-3 h2{
-    font-size: 1.5em;
-    font-weight: 300;
-    line-height: 1.2;
-    margin: 0;
-    color: #fff;
-}
+
   .marketplace div:first-child{
+    width: 312px;
     color: #fff;
     background: #00ccb1;
     border-radius: 10px;
@@ -87,6 +70,7 @@ body{
     transition: all .2s ease 0s;
     }
   .marketplace div:nth-of-type(2){
+    width: 312px;
     color: #fff;
     background: #3d83df;
     border-radius: 10px;
@@ -97,7 +81,8 @@ body{
     justify-content: space-between;
     transition: all .2s ease 0s;
   }
-  .marketplace div:last-child{
+  .marketplace div:nth-of-type(3){
+    width: 312px;
     color: #fff;
     background: #1b2734;
     border-radius: 10px;
@@ -120,8 +105,57 @@ body{
 .item-3:hover{
     opacity: .9
 }
-#select-1{
-  border: transparent;
-  background: transparent;
+.item-1 h2{
+  font-family: Trebuchet MS, sans-serif;
+  font-size: 1.5em;
+  font-weight: 100;
+  line-height: 1.2;
+  margin: 0;
+  color: #fff;
 }
-  
+.item-2 h2{
+  font-family: Trebuchet MS, sans-serif;
+  font-size: 1.5em;
+  font-weight: 100;
+  line-height: 1.2;
+  margin: 0;
+  color: #fff;
+}
+.item-3 h2{
+  font-family: Trebuchet MS, sans-serif;
+  font-size: 1.5em;
+  font-weight: 100;
+  line-height: 1.2;
+  margin: 0;
+  color: #fff;
+}
+#select-1{
+  color: #fff;
+  margin: 80px 80px 0px 0px;
+  width: 77%;
+    background: transparent;
+    border: 0;
+    border-radius: 0;
+    text-decoration: underline;
+    height: 40px;
+    text-transform: uppercase;
+    outline: 0;
+    
+}
+#select-2{
+  color: #fff;
+  margin: 80px 80px 0px 0px;
+  width: 77%;
+    background: transparent;
+    border: 0;
+    border-radius: 0;
+    text-decoration: underline;
+    height: 40px;
+    text-transform: uppercase;
+    outline: 0;
+    
+    
+}
+  select option{
+    color: black;
+  }
