--- a/style.css
+++ b/style.css
@@ -106,15 +106,16 @@ body{
     opacity: .9
 }
 .item-1 h2{
-  font-family: Trebuchet MS, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5em;
   font-weight: 100;
   line-height: 1.2;
   margin: 0;
   color: #fff;
+  display: inline;
 }
 .item-2 h2{
-  font-family: Trebuchet MS, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5em;
   font-weight: 100;
   line-height: 1.2;
@@ -122,40 +123,85 @@ body{
   color: #fff;
 }
 .item-3 h2{
-  font-family: Trebuchet MS, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5em;
   font-weight: 100;
-  line-height: 1.2;
+  line-height: 1;
   margin: 0;
   color: #fff;
+  margin-bottom: 40px;
+  
 }
-#select-1{
+#loola{
+  position: relative;
+  right: 20px;
   color: #fff;
   margin: 80px 80px 0px 0px;
   width: 77%;
     background: transparent;
+    font-size: 17px;
     border: 0;
     border-radius: 0;
     text-decoration: underline;
     height: 40px;
-    text-transform: uppercase;
+    text-transform: capitalize;
     outline: 0;
     
 }
-#select-2{
+#thanya{
+  position: relative;
+  right: 20px;
   color: #fff;
   margin: 80px 80px 0px 0px;
-  width: 77%;
+  width: 80%;
     background: transparent;
     border: 0;
     border-radius: 0;
     text-decoration: underline;
+    font-size: 18px;
     height: 40px;
-    text-transform: uppercase;
+    text-transform: capitalize;
     outline: 0;
     
     
 }
-  select option{
+#thaltha{
+  position: relative;
+  right: 22px;
+  padding: 30px 90px 0px;
+  color: #fff;
+  width: 104%;
+    background: transparent;
+    font-size: 18px;
+    border: 0;
+    border-radius: 0;
+    padding: 0 2em 0 0;
+    outline: 0;
+    text-transform: none;
+    text-decoration: underline;
+    cursor: pointer;
+}
+#likhra{
+  position: relative;
+  right: 22px;
+  margin-top: 10px;
+  font-size: 20px;
+  color: #fff;
+  width: 220.63px;
+    background: transparent;
+    font-size: 17px;
+    border: 0;
+    border-radius: 0;
+    outline: 0;
+    text-transform: capitalize;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+  select option{ 
     color: black;
   }
+.opt-container{
+  position: relative;
+top: 10px;
+}
